# unibot

./: .lintstagedrc  README.md  biome.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: chat.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: core.rs  error.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: main.rs  mod.rs
src-tauri/src/commands/chat/: group.rs  message.rs  mod.rs  request.rs  user.rs
src-tauri/src/models/: entities.rs  internal.rs  mod.rs
src-tauri/src/persistence/: db_pool.rs  migrator.rs  mod.rs
src-tauri/src/persistence/migrations/: 0001_initial_schema.sql  mod.rs
src-tauri/src/persistence/repo/: codecs.rs  interaction.rs  message.rs  mod.rs  tests.rs
src-tauri/src/persistence/repo/group/: basic.rs  content.rs  events.rs  mod.rs  requests.rs  schema.rs  types.rs
src-tauri/src/persistence/repo/user/: friends.rs  mod.rs  profile.rs  schema.rs  types.rs
src-tauri/src/services/: interaction.rs  message.rs  mod.rs  request.rs  user.rs
src-tauri/src/services/group/: basic.rs  content.rs  management.rs  mod.rs  requests.rs
src/assets/: emojis.json
src/data/: faces.json
src/hooks/: use-chat-event-bus.ts
src/layouts/: MainLayout.tsx
src/lib/: chat-query.ts  face-library.ts  friendships-query.ts  groups-query.ts  message-content.ts  message-content.tsx  modal.tsx  mutations.ts  request-query.ts  time-format.ts  users-query.ts  utils.ts
src/store/: use-auth-store.ts  use-chat-composer-store.ts
src/types/: chat.ts  event.ts  group.ts  request.ts  (+1 more)
(+41 files in other folders)
